--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "allowImportingTsExtensions": true
   },
 
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
