--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "postbuild": "next-sitemap"
     },
     "dependencies": {
         "@chakra-ui/react": "^2.4.9",
@@ -34,6 +35,7 @@
         "next-auth": "^4.18.10",
         "next-connect": "^0.13.0",
         "next-s3-upload": "^0.2.9",
+        "next-sitemap": "^4.2.3",
         "nodemailer": "^6.9.1",
         "nprogress": "^0.2.0",
         "react": "^18.3.1",
